--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
+    "formik": "^2.2.9",
     "lottie-react-native": "^4.0.2",
     "react": "17.0.1",
     "react-native": "0.64.2",
